--- a/src/templates/apropos.jade
+++ b/src/templates/apropos.jade
@@ -1,6 +1,5 @@
 section.background
-	#main-texture
-	#main-background
+	.main-texture
 	.container
 		.twelve.col
 			h3.octo-top.double-bot.text-white.text-center A propos de nous
