--- a/src/templates/contact.jade
+++ b/src/templates/contact.jade
@@ -1,6 +1,5 @@
 section.background
-	#main-texture
-	#main-background
+	.main-texture
 	.container
 		.twelve.col
 			h3.octo-top.double-bot.text-white.text-center Contactez nous !
@@ -18,8 +17,9 @@ section.background
 				label Message
 				textarea.full(placeholder="Votre message ici ...")
 				button.add-top.button.complement.pull-right Envoyer
+				.clearfix.double-bot
 		.four.col.double-padding
-			i.icon.icon-plane.pull-left.text-grey-80.add-padding
+			i.icon.icon-plane.pull-left.text-grey-80.add-padding.large-display
 			h6 Ou bien par
 			hr.lines
 			ul.no-style
