--- a/src/templates/faq.jade
+++ b/src/templates/faq.jade
@@ -1,6 +1,5 @@
 section.background
-	#main-texture
-	#main-background
+	.main-texture
 	.container
 		.twelve.col
 			h3.octo-top.double-bot.text-white.text-center Les questions c'est par ici !
@@ -9,7 +8,7 @@ section.background
 	.container.quad-bot.quad-top
 		.row
 			.twelve.col
-				i.icon.icon-pen.pull-left.text-grey-80.add-padding
+				i.icon.icon-pen.pull-left.text-grey-80.add-padding.large-display
 				h6 Comment m'inscrire au statut d'auto-entrepreneur?
 				hr.lines
 				p.
@@ -23,7 +22,7 @@ section.background
 					du moment que celui-ci est dédié à votre activité. 
 		.row
 			.twelve.col.double-top
-				i.icon.icon-pen.pull-left.text-grey-80.add-padding
+				i.icon.icon-pen.pull-left.text-grey-80.add-padding.large-display
 				h6 Quelles sont mes obligations dans le cas d'une activité artisanale?
 				hr.lines
 				p.
@@ -36,7 +35,7 @@ section.background
 					 contracter une assurance professionnel.
 		.row
 			.twelve.col.double-top
-				i.icon.icon-pen.pull-left.text-grey-80.add-padding
+				i.icon.icon-pen.pull-left.text-grey-80.add-padding.large-display
 				h6 Doit-je payer des cotisation si je ne gagne pas d'argent?
 				hr.lines
 				p.
@@ -45,7 +44,7 @@ section.background
 					gagnez rien, vous ne payez rien.
 		.row
 			.twelve.col.double-top
-				i.icon.icon-pen.pull-left.text-grey-80.add-padding
+				i.icon.icon-pen.pull-left.text-grey-80.add-padding.large-display
 				h6 Puis-je cumuler les status?
 				hr.lines
 				p.
@@ -54,7 +53,7 @@ section.background
 					de gérant minoritaire au sein d'une SARL et être auto-entrepreneur.
 		.row
 			.twelve.col.double-top
-				i.icon.icon-pen.pull-left.text-grey-80.add-padding
+				i.icon.icon-pen.pull-left.text-grey-80.add-padding.large-display
 				h6 Quel limite de chiffre d'affaire?
 				hr.lines
 				p.
