--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -1,11 +1,12 @@
 section.background
-	#main-texture
-	#main-background
-	#welcome
+	.main-texture
+	#main-background.large-display
+	#welcome.large-display
 	#content.container
 		.twelve.col
-			h3.text-right.octo-top.text-white Enfin une bonne raison d'entreprendre !
-			button.pull-right.button.quad-bot.primary(href="") essais gratuit
+			h3.text-right.octo-top.text-white.
+				Enfin une bonne raison<br> d'entreprendre !
+			button.cta.pull-right.button.quad-bot.primary(href="") essais gratuit
 
 section
 	.container
@@ -18,10 +19,10 @@ section
 					Nous avons éliminé toutes options superflu pour vous garantir un environnement de travail agréable et
 					intuitif.
 			.four.col
-				.big-circle.circle-paperasse.quad-top
+				.big-circle.circle-paperasse.quad-top.large-display
 		.row
 			.four.col
-				.big-circle.circle-paperasse.quad-top
+				.big-circle.circle-paperasse.quad-top.large-display
 			.eight.col.text-right
 				h4.quad-top Plus rapide
 				h6.text-grey-80 Des fonctionnalités innovantes pour plus de temps libre.
@@ -39,7 +40,7 @@ section
 					Vous pouvez à tout moment vous désabonner sur simple clic depuis le menu option tout en exportant votre comptabilité.
 					Et même dans ce cas, votre compte et vos données restent accessible à tout moment.
 			.four.col
-				.big-circle.circle-paperasse.quad-top
+				.big-circle.circle-paperasse.quad-top.large-display
 
 section
 	.container
@@ -82,9 +83,10 @@ section
 				// p.text-center mabite
 section.background
 	#peon
+	.main-texture
 	.container
 		.row
 			.twelve.col
 				h4.text-white.text-center.quad-top Convaincu ou non, essayez-le !
 				.fluid-horizontal-center
-					button.button.double-bot.primary C'est gratuit
+					button.cta.button.double-bot.primary C'est gratuit
