--- a/src/templates/nav.jade
+++ b/src/templates/nav.jade
@@ -3,9 +3,9 @@ nav
 		.row
 			.twelve.col
 				a#logo.pull-left(ui-sref="nav.home")
-				a.pull-left.uppercase(ui-sref="nav.apropos") A propos
-				a.pull-left.uppercase(ui-sref="nav.contact") Contact
-				a.pull-left.uppercase(ui-sref="nav.faq") FAQ
+				a.pull-left.uppercase.large-display(ui-sref="nav.apropos") A propos
+				a.pull-left.uppercase.large-display(ui-sref="nav.contact") Contact
+				a.pull-left.uppercase.large-display(ui-sref="nav.faq") FAQ
 				button.button.small.pull-right.complement(ui-sref="#") Se connecter
 				button.button.small.pull-right.primary(ui-sref="#") Créer un compte
 
