--- a/src/styles/abstract/tools/mixin.scss
+++ b/src/styles/abstract/tools/mixin.scss
@@ -49,9 +49,14 @@
 		border-radius:				100%;
 	}
 
-	@mixin box-shadow ($x:3px, $y:3px, $blur:5px, $alpha: 0.5) {
-		box-shadow: 				$x $y $blur rgba(0, 0, 0, $alpha);
+	@mixin box-shadow ($x:3px, $y:3px, $blur:5px, $color: grey) {
+
+		-webkit-box-shadow: 		$x $y $blur $color;
+		-moz-box-shadow: 			$x $y $blur $color;
+		-o-box-shadow: 				$x $y $blur $color;
+		box-shadow: 				$x $y $blur $color;
 	}
+
 
 
 	@mixin text-shadow ($x:1px, $y:1px, $blur:0px, $color: white) {
