--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -31,6 +31,7 @@
 @import "molecule/footer";
 @import "molecule/home";
 @import "molecule/nav";
+@import "molecule/question";
 
 // @import "../../bower_components/bourbon/app/assets/stylesheets/_bourbon";
 // @import "../../bower_components/neat/app/assets/stylesheets/_neat";
