--- a/src/templates/apropos.jade
+++ b/src/templates/apropos.jade
@@ -13,7 +13,8 @@ section.background
 				Cette implication à permis d'identifier les besoins réel des auto-entrepreneurs 
 				afin de mettre au point un outil et des fonctionnalités innovante pour vous assister quotidiennement dans la gestion de votre auto-entreprise.
 	.row.double-top.text-center
-		h4.quad-bot L'equipe
+		h4 L'equipe
+		hr.tiny.quad-bot.lines
 		.three.col
 			#quentin.flip.double-bottom
 				.front
@@ -42,7 +43,8 @@ section.background
 			
 	.row.text-center
 		.twelve.col.quad-top.quad-bot
-			h4.quad-bot Mentions légales
+			h4 Mentions légales
+			hr.tiny.quad-bot.lines
 			p.
 				<br> SARL au capital de 1000 euros 
 				<br> 38, rue de jouy 57160 Moulins les Metz
