--- a/src/index.jade
+++ b/src/index.jade
@@ -28,11 +28,15 @@ html
 		meta(name='robots', content='index, follow')
 		meta(http-equiv='cache-control', content='public')
 		link(type="text/css", rel="stylesheet", href="styles/style.css")
-		script(type="text/javascript" src="vendor/vendor.min.js")
 		base(href="/")
-
+		script(type="text/javascript").
+			!function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="3.1.0";
+			analytics.load("q5l1jwayPS6xa3Kxi0ujZUkKAEjh2g2E");
+			analytics.page()
+			}}();
 
 	body(ng-scroll="" ng-app="app")
 		div(ui-view="")
 		
+		script(type="text/javascript" src="vendor/vendor.min.js")
 		script(type="text/javascript" src="scripts/app.min.js")
