--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -6,7 +6,7 @@ section.background
 		.twelve.col
 			h3.text-right.octo-top.text-white.
 				Enfin une bonne raison<br> d'entreprendre !
-			button.cta.pull-right.button.quad-bot.primary(ng-click="trackCta1()" href="") essais gratuit
+			a.cta.pull-right.button.quad-bot.primary(ng-click="trackCta1()" href="http://91.121.133.217:9000") essais gratuit
 
 section
 	.container
@@ -89,4 +89,4 @@ section.background
 			.twelve.col
 				h4.text-white.text-center.quad-top Convaincu ou non, essayez-le !
 				.fluid-horizontal-center
-					button(ng-click="trackCta1()").cta.button.double-bot.primary C'est gratuit
+					button(ng-click="trackCta1()" href="http://91.121.133.217:9000").cta.button.double-bot.primary C'est gratuit
