--- a/src/templates/nav.jade
+++ b/src/templates/nav.jade
@@ -6,8 +6,8 @@ nav
 				a.pull-left.uppercase.large-display(ui-sref="nav.apropos") A propos
 				a.pull-left.uppercase.large-display(ui-sref="nav.contact") Contact
 				a.pull-left.uppercase.large-display(ui-sref="nav.faq") FAQ
-				button.button.small.pull-right.complement(ui-sref="#") Se connecter
-				button.button.small.pull-right.primary(ui-sref="#" ng-click="trackCreate()") Créer un compte
+				a.button.small.pull-right.complement(href="http://91.121.133.217:9000") Se connecter
+				a.button.small.pull-right.primary(ng-click="trackCreate()" href="http://91.121.133.217:9000/inscription") Créer un compte
 
 div(ui-view="")
 footer.bg-complement
@@ -17,9 +17,9 @@ footer.bg-complement
 				h6 L'application
 				ul.no-style
 					li
-						a(href="#") Créer un compte
+						a(href="http://91.121.133.217:9000/inscription") Créer un compte
 					li
-						a(href="#") S'inscrire
+						a(href="http://91.121.133.217:9000/") S'inscrire
 					li
 						a(ui-sref="nav.faq") FAQ
 			.three.col
