--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -7,8 +7,17 @@ section.background
 			h3.text-right.octo-top.text-white.
 				Enfin une bonne raison<br> d'entreprendre !
 			a.cta.pull-right.button.quad-bot.primary(ng-click="trackCta1()" href="http://91.121.133.217:9000/inscription") essais gratuit
+section.background.bg-grey-05
+	//.main-texture
+	#video-container
+		h4.text-center.double-top.
+			Vos devis en moins de<br>60 secondes
+		#video-box.double-top
+			| <iframe width="100%" height="315" src="//www.youtube.com/embed/M-7l9Wjkhkk" frameborder="0" allowfullscreen></iframe>
 
 section
+	.clearfix.double-top
+	.clearfix.octo-top
 	.container
 		.row
 			.eight.col.quad-top
@@ -26,34 +35,26 @@ section
 			.eight.col.text-right
 				h4.quad-top.remove-bot Plus rapide
 				h6.text-grey-80 Des fonctionnalités innovantes pour plus de temps libre.
-				p.quad-bot.
+				p.
 					Grace à ses fonctionnalités innovantes, comme l'édition de facture instantanée, ou la validation des devis en
 					ligne, Peon accélère le fonctionnement quotidien de votre auto-entreprise.
 					La plupart des actions sont automatisées. Enregistrez vos clients, sectionnez vos prestations, et laissez
 					Peon faire le reste. 
-		.row
-			.eight.col
-				h4.quad-top.remove-bot Sans engagement
-				h6.text-grey-80 Aucune contrainte pour une liberté totale.
-				p.
-					La totalitée du service est accessible sans engagement.
-					Vous pouvez à tout moment vous désabonner sur simple clic depuis le menu option tout en exportant votre comptabilité.
-					Et même dans ce cas, votre compte et vos données restent accessible à tout moment.
-			.four.col#waypoint3
-				#circle-image-3.big-circle.quad-top.large-display
-section.background.octo-top.bg-grey-05
-	.main-texture
-	#video-container
-		h4.text-center.double-top.
-			Vos devis en moins de<br>60 secondes
-		#video-box.double-top
-			| <iframe width="100%" height="315" src="https://www.youtube.com/embed/GsFQ6jskci0" frameborder="0" allowfullscreen></iframe>
-
-section.octo-top
+		//- .row
+		//- 	.eight.col
+		//- 		h4.quad-top.remove-bot Sans engagement
+		//- 		h6.text-grey-80 Aucune contrainte pour une liberté totale.
+		//- 		p.
+		//- 			La totalitée du service est accessible sans engagement.
+		//- 			Vous pouvez à tout moment vous désabonner sur simple clic depuis le menu option tout en exportant votre comptabilité.
+		//- 			Et même dans ce cas, votre compte et vos données restent accessible à tout moment.
+		//- 	.four.col#waypoint3
+		//- 		#circle-image-3.big-circle.quad-top.large-display
+section.double-top
 	.container
 		.row
 			.twelve.col
-				h4.text-center.octo-top En détails, ça fait quoi ?
+				h4.text-center.quad-top En détails, ça fait quoi ?
 				hr.lines.tiny.quad-bot
 		.row
 			.four.col
