update zoning ng | include video system

--- a/src/styles/abstract/color.scss
+++ b/src/styles/abstract/color.scss
@@ -63,6 +63,8 @@
 		.bg-danger        	 		{ background-color: $color-danger!important; }
 		.bg-success       			{ background-color: $color-success!important; }
 
+		.bg-white					{ background-color: white!important; }
+		.bg-grey-03					{ background-color: rgb(250,250,250)!important; }
 		.bg-grey-05					{ background-color: $color-grey-05!important; }
 		.bg-grey-10					{ background-color: $color-grey-10!important; }
 		.bg-grey-15					{ background-color: $color-grey-15!important; }
