--- a/src/styles/molecule/home.scss
+++ b/src/styles/molecule/home.scss
@@ -11,7 +11,6 @@
 	overflow:hidden;
 }
 
-
 section.background {
 	width: 100%;
 	background-color: #8DB2C8;
@@ -25,20 +24,30 @@ section.background {
 {
 	opacity:1;
 	overflow:visible;
-	position:relative;
 	width:100%;
-	min-height: 350px;
 	padding-top:1px;
 	#video-box {
+		position:relative;
 		width:50%;
-		left:0;
-		right:0;
+		max-height:350px;
 		margin: 0 auto;
-		position:absolute;
-		bottom:-10%;
 		padding: 20px;
-		background-color: $color-grey-20;
-		margin-bottom:-150px;
+		background-color: $color-grey-05;
+		@include transition();
+		&:hover{
+			background-color: $color-grey-15;
+		}
+		iframe {
+
+		}
+		#video-cover {
+			z-index: 10;
+			width :100%;
+			height:100%;
+			@include box-sizing(border-box);
+			@include cover();
+		}
+
 	}
 }
 #content {
