--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -12,8 +12,9 @@ section.background.bg-white
 	#video-container
 		#video-box.quad-top(ng-init="isVideoClicked=false")
 			img#video-cover(ng-click="videoClickMask()" ng-if="isVideoClicked == false" src='assets/imgs/png/video.png')
-			| <iframe  ng-if="isVideoClicked == true" width="100%" height="315" src="https://www.youtube.com/embed/Tve2GEGn7GA?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+			| <iframe  ng-if="isVideoClicked == true" frameborder="0" width="558" height="300" src="https://www.youtube.com/embed/Tve2GEGn7GA?rel=0&theme=dark&color=white&autoplay=1&autohide=1&modestbranding=1&showinfo=0&rel=0&iv_load_policy=3" frameborder="1" allowfullscreen></iframe>
 		.clearfix
+
 		h4.text-center.double-top.
 			Vos devis en moins de<br>60 secondes
 section
