--- a/src/templates/faq.jade
+++ b/src/templates/faq.jade
@@ -2,7 +2,7 @@ section.background
 	.main-texture
 	.container
 		.twelve.col
-			h3.octo-top.double-bot.text-white.text-center Les questions c'est par ici !
+			h3.quad-top.double-bot.text-white.text-center Les questions c'est par ici !
 .row
 	.container.quad-bot.quad-top
 		.row
