--- a/src/templates/apropos.jade
+++ b/src/templates/apropos.jade
@@ -2,19 +2,9 @@ section.background
 	.main-texture
 	.container
 		.twelve.col
-			h3.octo-top.double-bot.text-white.text-center A propos de nous
+			h3.quad-top.double-bot.text-white.text-center L'equipe
 .container
-	.row.text-center.quad-bot.quad-top
-		.twelve.col
-			p.text-center.
-				Peon est un logiciel de gestion d'activité spécialisé pour auto-entrepreneur exerçant une activité de 
-				prestation de service, ou une activité libéral.
-				Conçu <b>par des auto-entrepreneurs</b>, il est le logiciel le plus proche de vous.
-				Cette implication à permis d'identifier les besoins réel des auto-entrepreneurs 
-				afin de mettre au point un outil et des fonctionnalités innovante pour vous assister quotidiennement dans la gestion de votre auto-entreprise.
-	.row.double-top.text-center
-		h4 L'equipe
-		hr.tiny.quad-bot.lines
+	.row.quad-top.text-center
 		.three.col
 			#quentin.flip.double-bottom
 				.front
@@ -40,6 +30,22 @@ section.background
 			h6.add-top Design
 			p.text-grey-100 Thibaud Frere
 
+.container.double-top.double-bot
+	form.row
+		.twelve.col.double-top
+			h4.text-center Nous contacter
+			hr.tiny.quad-bot.lines
+			.six.col
+				label Ton nom
+				input.full(type="text", placeholder="")
+			.six.col
+				label Email
+				input.full(type="email", placeholder="")
+			.twelve.col
+				label Message
+				textarea.full(placeholder="Votre message ici ...")
+				button.add-top.button.complement.pull-right Envoyer
+				.clearfix.double-bot
 			
 	.row.text-center
 		.twelve.col.quad-top.quad-bot
