--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -1,57 +1,42 @@
 section.background
 	.main-texture
-	#main-background.large-display
+	//- #main-background.large-display
 	#welcome.large-display
 	#content.container
 		.twelve.col
-			h3.text-right.octo-top.text-white.
-				Enfin une bonne raison<br> d'entreprendre !
-			a.cta.pull-right.button.quad-bot.primary(ng-click="trackCta1()" href="http://91.121.133.217:9000/inscription") essais gratuit
-section.background.bg-white
-	//.main-texture
-	#video-container
-		#video-box.quad-top(ng-init="isVideoClicked=false")
-			img#video-cover(ng-click="videoClickMask()" ng-if="isVideoClicked == false" src='assets/imgs/png/video.png')
-			| <iframe  ng-if="isVideoClicked == true" frameborder="0" width="558" height="300" src="https://www.youtube.com/embed/Tve2GEGn7GA?rel=0&theme=dark&color=white&autoplay=1&autohide=1&modestbranding=1&showinfo=0&rel=0&iv_load_policy=3" frameborder="1" allowfullscreen></iframe>
-		.clearfix
-
-		h4.text-center.double-top.
-			Vos devis en moins de<br>60 secondes
+			h3.text-center.octo-top.remove-bot.text-white.
+				Entreprendre simplement
+			h6.text-center.text-white.add-bot.
+				Expert comptable automatisé pour auto-entrepreneur.
+			.button-box.centered
+				a.cta.button.octo-bot.half-right.primary(ng-click="trackCta1()" href="http://app.peon.fr/inscription") Mois d'essais gratuit
+				a.cta.button.octo-bot.complement(ng-click="trackCta1()" href="http://app.peon.fr/connexion") Demo
 section
-	.clearfix.quad-top
+	.clearfix
 	.container
 		.row
-			.eight.col.quad-top
-				h4.add-top.remove-bot Retour à l'essentiel
-				h6.text-grey-80 Une interface simple pour une prise en main immédiate.
+			.six.col.quad-top
+				h5.add-top.remove-bot Vos devis en 56 secondes
+				hr.lines
 				p.quad-bot.
-					Conçus par des auto-entrepreneurs, Peon est probablement le logiciel le plus proche de vous.
-					Nous avons éliminé toutes options superflu pour vous garantir un environnement de travail agréable et
-					intuitif.
-			.four.col#waypoint1
-				#circle-image-1.big-circle.quad-top.large-display
-		.row
-			.four.col#waypoint2
-				#circle-image-2.big-circle.quad-top.large-display
-			.eight.col.text-right
-				h4.quad-top.remove-bot Plus rapide
-				h6.text-grey-80 Des fonctionnalités innovantes pour plus de temps libre.
-				p.
-					Grace à ses fonctionnalités innovantes, comme l'édition de facture instantanée, ou la validation des devis en
-					ligne, Peon accélère le fonctionnement quotidien de votre auto-entreprise.
-					La plupart des actions sont automatisées. Enregistrez vos clients, sectionnez vos prestations, et laissez
-					Peon faire le reste. 
-		//- .row
-		//- 	.eight.col
-		//- 		h4.quad-top.remove-bot Sans engagement
-		//- 		h6.text-grey-80 Aucune contrainte pour une liberté totale.
-		//- 		p.
-		//- 			La totalitée du service est accessible sans engagement.
-		//- 			Vous pouvez à tout moment vous désabonner sur simple clic depuis le menu option tout en exportant votre comptabilité.
-		//- 			Et même dans ce cas, votre compte et vos données restent accessible à tout moment.
-		//- 	.four.col#waypoint3
-		//- 		#circle-image-3.big-circle.quad-top.large-display
-section.double-top
+					Peon est un expert comptable totalement automatisé permettant de vous concentrer uniquement sur les besoins réels de votre entreprise. 
+					Avec ça, plus d'excuses !
+			//- #waypoint1
+			.six.col
+					#video-container.double-top
+						#video-box.double-bot(ng-init="isVideoClicked=false")
+							img#video-cover(ng-click="videoClickMask()" ng-if="isVideoClicked == false" src='assets/imgs/png/video.png')
+							| <iframe  ng-if="isVideoClicked == true" frameborder="0" width="558" height="300" src="https://www.youtube.com/embed/Tve2GEGn7GA?rel=0&theme=dark&color=white&autoplay=1&autohide=1&modestbranding=1&showinfo=0&rel=0&iv_load_policy=3" frameborder="1" allowfullscreen></iframe>
+						.clearfix
+//- section.background.bg-white
+//- 	h4.text-center.double-top.
+//- 		Vos devis en moins de<br>60 secondes
+//- 	#video-container
+//- 		#video-box.double-bot(ng-init="isVideoClicked=false")
+//- 			img#video-cover(ng-click="videoClickMask()" ng-if="isVideoClicked == false" src='assets/imgs/png/video.png')
+//- 			| <iframe  ng-if="isVideoClicked == true" frameborder="0" width="558" height="300" src="https://www.youtube.com/embed/Tve2GEGn7GA?rel=0&theme=dark&color=white&autoplay=1&autohide=1&modestbranding=1&showinfo=0&rel=0&iv_load_policy=3" frameborder="1" allowfullscreen></iframe>
+//- 		.clearfix
+section
 	.container
 		.row
 			.twelve.col
@@ -60,7 +45,7 @@ section.double-top
 		.row
 			.four.col
 				.circle.small-circle.circle-responsive
-				p.i.add-top.text-center Accessible sur tablette, PC
+				p.i.add-top.text-center Accessible sur tablette et PC.
 				// p.text-center mabite
 			.four.col
 				.circle.small-circle.circle-cloudsafe
@@ -91,4 +76,4 @@ section.background
 			.twelve.col
 				h4.text-white.text-center.quad-top Convaincu ou non, essayez-le !
 				.fluid-horizontal-center
-					a(ng-click="trackCta1()" href="http://91.121.133.217:9000").cta.button.double-bot.primary C'est gratuit
+					a(ng-click="trackCta1()" href="http://app.peon.fr").cta.button.double-bot.primary C'est gratuit
