update lvalue proposition

--- a/src/templates/apropos.jade
+++ b/src/templates/apropos.jade
@@ -34,7 +34,7 @@ section.background
 	form.row
 		.twelve.col.double-top
 			h4.text-center Nous contacter
-			hr.tiny.quad-bot.lines
+			hr.centered.tiny.quad-bot.lines
 			.six.col
 				label Ton nom
 				input.full(type="text", placeholder="")
@@ -50,7 +50,7 @@ section.background
 	.row.text-center
 		.twelve.col.quad-top.quad-bot
 			h4 Mentions légales
-			hr.tiny.quad-bot.lines
+			hr.centered.tiny.quad-bot.lines
 			p.
 				<br> SARL au capital de 1000 euros 
 				<br> 38, rue de jouy 57160 Moulins les Metz
