--- a/src/styles/atom/hr.scss
+++ b/src/styles/atom/hr.scss
@@ -36,17 +36,18 @@
 
 		}
 
+		hr.centered {
+			margin: 0 auto;
+		}
+
 		hr.half {
 			width: 50%;
-			margin: 0 auto;
 		}
 
 		hr.quart {
 			width: 25%;
-			margin: 0 auto;
 		}
 
 		hr.tiny {
 			width: 10%;
-			margin: 0 auto;
 		}
