--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -4,20 +4,24 @@ section.background
 	#welcome.large-display
 	#content.container
 		.twelve.col
-			h3.text-center.octo-top.remove-bot.text-white.
-				Entreprendre simplement
-			h6.text-center.text-white.add-bot.
-				Expert comptable automatisé pour auto-entrepreneur.
-			.button-box.centered
-				a.cta.button.octo-bot.half-right.primary(ng-click="trackCta1()" href="http://app.peon.fr/inscription") Mois d'essais gratuit
-				a.cta.button.octo-bot.complement(ng-click="trackCta1()" href="http://app.peon.fr/connexion") Demo
+			h3.text-right.six-top.remove-bot.text-white.
+
+				<b>Une bonne raison d'entreprendre</b> 
+			h6.text-right.text-white.double-bot.
+				Gestion <b>auto-entrepreneur</b> pour prestataires de services et activités libérales
+			.pull-right
+				a.cta.button.half-right.primary(ng-click="trackCta1()" href="http://app.peon.fr/inscription") Mois d'essais gratuit
+				a.cta.button.complement(ng-click="trackCta1()" href="http://app.peon.fr/connexion") Demo
+			.clearfix
+			p.text-white.text-right.quad-bot.
+				Seulement <b>4.90</b> par mois.
 section
 	.clearfix
 	.container
 		.row
 			.six.col.quad-top
 				h5.add-top.remove-bot Vos devis en 56 secondes
-				hr.lines
+				hr.lines.half
 				p.quad-bot.
 					Peon est un expert comptable totalement automatisé permettant de vous concentrer uniquement sur les besoins réels de votre entreprise. 
 					Avec ça, plus d'excuses !
@@ -41,33 +45,27 @@ section
 		.row
 			.twelve.col
 				h4.text-center.quad-top En détails, ça fait quoi ?
-				hr.lines.tiny.quad-bot
+				hr.lines.tiny.quad-bot.centered
 		.row
 			.four.col
 				.circle.small-circle.circle-responsive
 				p.i.add-top.text-center Accessible sur tablette et PC.
-				// p.text-center mabite
 			.four.col
 				.circle.small-circle.circle-cloudsafe
 				p.i.add-top.text-center Données sécurisées.
-				// p.text-center mabite
 			.four.col
 				.circle.small-circle.circle-papers
-				p.i.add-top.text-center Edition de devis et factures.
-				// p.text-center mabite
+				p.i.add-top.text-center Factures instantannées
 		.row.octo-bot.double-top
 			.four.col
 				.circle.small-circle.circle-calculator
 				p.i.add-top.text-center Calcul des cotisations.
-				// p.text-center mabite
 			.four.col
 				.circle.small-circle.circle-pig
 				p.i.add-top.text-center Gestion des impayés.
-				// p.text-center mabite
 			.four.col
 				.circle.small-circle.circle-unlimited
 				p.i.add-top.text-center Sans engagement.
-				// p.text-center mabite
 section.background
 	#peon
 	.main-texture
