--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -30,7 +30,7 @@ section
 					#video-container.double-top
 						#video-box.double-bot(ng-init="isVideoClicked=false")
 							img#video-cover(ng-click="videoClickMask()" ng-if="isVideoClicked == false" src='assets/imgs/png/video.png')
-							| <iframe  ng-if="isVideoClicked == true" frameborder="0" width="558" height="300" src="https://www.youtube.com/embed/Tve2GEGn7GA?rel=0&theme=dark&color=white&autoplay=1&autohide=1&modestbranding=1&showinfo=0&rel=0&iv_load_policy=3" frameborder="1" allowfullscreen></iframe>
+							| <iframe  ng-if="isVideoClicked == true" frameborder="0" width="558" height="300" src="https://www.youtube.com/embed/mFRwMaYtVjQ?rel=0&theme=dark&color=white&autoplay=1&autohide=1&modestbranding=1&showinfo=0&rel=0&iv_load_policy=3" frameborder="1" allowfullscreen></iframe>
 						.clearfix
 //- section.background.bg-white
 //- 	h4.text-center.double-top.
