add bêta banniere

--- a/src/index.jade
+++ b/src/index.jade
@@ -46,6 +46,7 @@ html
 
 
 	body(ng-scroll="" ng-app="app")
+		.beta
 		div(ui-view="")
 		
 		script(type="text/javascript" src="vendor/vendor.min.js")
