--- a/src/index.jade
+++ b/src/index.jade
@@ -46,7 +46,7 @@ html
 
 
 	body(ng-scroll="" ng-app="app")
-		.beta
+		.beta.large-display
 		div(ui-view="")
 		
 		script(type="text/javascript" src="vendor/vendor.min.js")
