--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -1,26 +1,26 @@
 section.background
 	.main-texture
-	//- #main-background.large-display
+	#main-background
 	#welcome.large-display
 	#content.container
 		.twelve.col
-			h3.text-right.six-top.remove-bot.text-white.
+			h3(style="text-shadow: 2px 2px 3px rgba(0,0,0,0.1)").shadow.text-right.six-top.remove-bot.text-white.
 
 				<b>Une bonne raison d'entreprendre</b> 
-			h6.text-right.text-white.double-bot.
+			h6(style="text-shadow: 2px 2px 3px rgba(0,0,0,0.1)").shadow.text-right.text-white.double-bot.
 				Gestion <b>auto-entrepreneur</b> pour prestataires de services et activités libérales
 			.pull-right
 				a.cta.button.half-right.primary(ng-click="trackCta1()" href="http://app.peon.fr/inscription") Mois d'essais gratuit
 				a.cta.button.complement(ng-click="trackCta1()" href="http://app.peon.fr/connexion") Demo
 			.clearfix
-			p.text-white.text-right.quad-bot.
+			p(style="text-shadow: 2px 2px 3px rgba(0,0,0,0.1)").shadow.text-white.text-right.quad-bot.
 				Seulement <b>4.90</b> par mois.
 section
 	.clearfix
 	.container
 		.row
 			.six.col.quad-top
-				h5.add-top.remove-bot Vos devis en 56 secondes
+				h5.add-top.remove-bot Vos factures en 42 secondes
 				hr.lines.half
 				p.quad-bot.
 					Peon est un expert comptable totalement automatisé permettant de vous concentrer uniquement sur les besoins réels de votre entreprise. 
@@ -29,8 +29,12 @@ section
 			.six.col
 					#video-container.double-top
 						#video-box.double-bot(ng-init="isVideoClicked=false")
-							img#video-cover(ng-click="videoClickMask()" ng-if="isVideoClicked == false" src='assets/imgs/png/video.png')
-							| <iframe  ng-if="isVideoClicked == true" frameborder="0" width="558" height="300" src="https://www.youtube.com/embed/mFRwMaYtVjQ?rel=0&theme=dark&color=white&autoplay=1&autohide=1&modestbranding=1&showinfo=0&rel=0&iv_load_policy=3" frameborder="1" allowfullscreen></iframe>
+							div(ng-click="videoClickMask()" ng-if="isVideoClicked == false")
+								#play
+									#triangle
+								img#video-cover(src='assets/imgs/svg/video.svg')
+							| <iframe  ng-if="isVideoClicked == true" frameborder="0" width="100%" height="300" src="https://www.youtube.com/embed/mFRwMaYtVjQ?rel=0&theme=dark&color=white&autoplay=1&autohide=1&modestbranding=1&showinfo=0&rel=0&iv_load_policy=3" frameborder="1" allowfullscreen></iframe>
+
 						.clearfix
 //- section.background.bg-white
 //- 	h4.text-center.double-top.
