--- a/src/templates/404.jade
+++ b/src/templates/404.jade
@@ -1,3 +1,4 @@
-.container.screen-box
-	h1.octo-top.text-center.
-		404 ouech
+.screen-box
+	#background_404
+		h1(style="padding-top:20%;").b.text-white.text-center.
+			404
