--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -34,6 +34,14 @@
 @import "molecule/question";
 @import "molecule/newsletter";
 
+#background_404 {
+	width:100%;
+	height:100%;
+	@include cover();
+	background-repeat: no-repeat;
+	background-image: url('../assets/imgs/svg/404.svg');
+}
+
 .screen-box {
 	position:relative;
 	width:100%;
