--- a/src/templates/faq.jade
+++ b/src/templates/faq.jade
@@ -19,6 +19,7 @@ section.background
 				.background-2
 				p.text-left.add-top.double-left.b.
 					Statut
+			.clearfix.double-bot
 			div#question_handler(ui-view="")
 		form(name="form" novalidate).row.double-top.double-bot
 			.eight.offset-two.col.double-top
