--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -34,6 +34,27 @@
 @import "molecule/question";
 @import "molecule/newsletter";
 
+
+#thib {
+	@include cover();
+	background-image: url('../assets/imgs/jpg/thib.jpg');
+}
+
+#val {
+	@include cover();
+	background-image: url('../assets/imgs/jpg/val.jpg');
+}
+
+#antho {
+	@include cover();
+	background-image: url('../assets/imgs/jpg/antho.jpg');
+}
+
+#quentin {
+	@include cover();
+	background-image: url('../assets/imgs/jpg/quentin.jpg');
+}
+
 #background_404 {
 	width:100%;
 	height:100%;
