--- a/src/templates/apropos.jade
+++ b/src/templates/apropos.jade
@@ -7,29 +7,33 @@ section.background
 .container
 	.row.quad-top.text-center
 		.three.col
-			#quentin.flip.double-bottom
-				.front
-				.back
-			h6.add-top Illustration
-			p.text-grey-100 Quentin Sombsthay
+			.flip.double-bottom
+				#quentin.front
+				#quentin.back
+			hr.lines.light.add-top.tiny.centered
+			h6.remove-bot.half-top Illustration
+			p.i.remove-top.text-grey-60 Quentin Sombsthay
 		.three.col
-			#anthony.flip.double-bottom
-				.front
-				.back
-			h6.add-top Marketing
-			p.text-grey-100 Anthony Lacroix
+			.flip.double-bottom
+				#antho.front
+				#antho.back
+			hr.lines.light.add-top.tiny.centered
+			h6.remove-bot.half-top Marketing
+			p.i.remove-top.text-grey-60 Anthony Lacroix
 		.three.col
-			#valentin.flip.double-bottom
-				.front
-				.back
-			h6.add-top Developpement
-			p.text-grey-100 Valentin Rebierre
+			.flip.double-bottom
+				#val.front
+				#val.back
+			hr.lines.light.add-top.tiny.centered
+			h6.remove-bot.half-top Developpement
+			p.i.remove-top.text-grey-60 Valentin Rebierre
 		.three.col
-			#thibaud.flip.double-bottom
-				.front
-				.back
-			h6.add-top Design
-			p.text-grey-100 Thibaud Frere
+			.flip.double-bottom
+				#thib.front
+				#thib.back
+			hr.lines.light.add-top.tiny.centered
+			h6.remove-bot.half-top Design
+			p.i.remove-top.text-grey-60 Thibaud Frere
 
 .container
 	//- form.row.quad-top
