--- a/src/templates/question.jade
+++ b/src/templates/question.jade
@@ -1,9 +1,9 @@
 .row
-	.container.double-top
+	.container
 		.row
 			.twelve.col
-				.question(ng-repeat="question in questions track by $index")
-					a(toggle-child-height="active" index="{{$index}}")
+				.question(ng-repeat="question in questions track by $index" id="{{$index}}")
+					a(ng-click="moveTo($index)" toggle-child-height="active" index="{{$index}}")
 						i.icon.icon-plus.pull-left.text-grey-80.add-padding
 						h6 {{question.title}}
 						hr.light
